--- a/client/src/app/shared/components/navigation/navigation.component.html
+++ b/client/src/app/shared/components/navigation/navigation.component.html
@@ -17,24 +17,15 @@
                     <a routerLink="/home">
                         <i class="fa fa-home fa-fw"></i> Home</a>
                 </li>
-                <li routerLinkActive="active" *ngIf="(isAuthenticated$ | async)">
+                <li routerLinkActive="active">
                     <a routerLink="/food">
                         <i class="fa fa-cutlery fa-fw"></i> Food</a>
                 </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li routerLinkActive="active" *ngIf="!(isAuthenticated$ | async)">
-                    <a routerLink="/account/login">
-                        <i class="fa fa-sign-in fa-fw"></i> Login</a>
-                </li>
-                <li routerLinkActive="active" *ngIf="(isAuthenticated$ | async)">
-                    <a href (click)="doNothing($event)">
-                        <i class="fa fa-user fa-fw"></i> Hello {{currentUserService.username}} </a>
-                </li>
-                <li routerLinkActive="active" *ngIf="(isAuthenticated$ | async)">
-                    <a href (click)="logout($event)">
-                        <i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                <li routerLinkActive="active">
+                    <i class="fa fa-user fa-fw"></i> Hello
                 </li>
             </ul>
 
